--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ serde = { version = "1.0.196", features = ["derive"] }
 # DB
 sqlx = {version = "0.7.3", features = ["postgres", "macros", "runtime-tokio-native-tls"]}
 
+# dotenv
+dotenv = "0.15.0"
